--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,34 @@
 body {
   background: #342f30;
 }
+input {
+  box-sizing: border-box;
+  border-radius: 1em;
+}
+input::before {
+  width: 0.15em;
+  height: 8em;
+  left: 28%;
+  top: 50%;
+  margin-top: -4em;
+  background-color: white;
+  border-radius: 1em;
+  box-shadow: 0 0 0 0.2em #ff6347, 0 0 1em 0.3em #ff6347,
+    1em 1em 0.4em 0.2em rgba(0, 0, 0, 0.6);
+}
+input::after {
+  box-sizing: border-box;
+  width: 4em;
+  height: 8.2em;
+  left: 48%;
+  top: 50%;
+  margin-top: -4.199999999999999em;
+  border-radius: 2em;
+  border: 0.15em solid white;
+  box-shadow: inset 0 0 0 0.2em #ff6347, inset 0 0 1em 0.3em #ff6347,
+    inset 1em 1em 0.4em rgba(0, 0, 0, 0.6), 0 0 0 0.2em #ff6347,
+    0 0 1em 0.3em #ff6347, 1em 1em 0.4em rgba(0, 0, 0, 0.6);
+}
 
 .shape {
   display: flex;
@@ -9,27 +37,32 @@ body {
   height: 100%;
 }
 .calculator-form {
-  height: 480px;
+  height: 465px;
   display: flex;
   align-items: center;
   flex-direction: column;
   position: relative;
   transform-style: preserve-3d;
   animation: rotate 6s linear infinite;
-  transform: rotateX(16deg) rotateY(304deg) rotateZ(360deg);
-  /* transform: rotateX(-28deg) rotateY(235deg) rotateZ(360deg); */
+  /* transform: rotateX(8deg) rotateY(8deg) rotateZ(360deg); */
 }
 
 .calculator-form > div {
   border-radius: 8px;
   position: absolute;
   opacity: 0.9;
-  background: linear-gradient(to right, #09adc8, #001f4e);
+  background-image: linear-gradient(
+    179deg,
+    rgba(0, 0, 0, 1) 9.2%,
+    rgba(127, 16, 16, 1) 103.9%
+  );
+  border: 0.1px solid #ffffff42;
 }
 .calculator-form form {
   display: grid;
-  grid-template-rows: 100px 100px 100px 100px;
-  grid-template-columns: 100px 100px 100px 100px;
+  gap: 9px;
+  grid-template-rows: 80px 80px 80px 80px;
+  grid-template-columns: 80px 80px 80px 80px;
 }
 button {
   border: none;
@@ -37,15 +70,14 @@ button {
   border-top: 1px solid black;
   border-left: 1px solid black;
   font-size: 18px;
-  background: #ff9130;
+  background: #e696509c;
+  border-radius: 1em;
 }
 .zero {
   grid-column-start: 0;
   grid-column-end: span 2;
-  border-bottom-left-radius: 8px;
 }
 .equal {
-  border-bottom-right-radius: 8px;
   border-bottom: 1px solid black;
 }
 input {
@@ -55,22 +87,25 @@ input {
   cursor: default;
   font-size: 18px;
   text-align: center;
-  background: #a9a9a9;
+  background: #ffffff9c;
 }
 input.total {
-  width: 400px;
+  width: 348px;
+  height: 100px;
   border: 1px solid black;
   border-bottom: 0;
-  height: 80px;
+  height: 60px;
   text-align: end;
   padding-right: 40px;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  background: #1b1b1b;
-  color: white;
+  border-top-left-radius: 18px;
+  border-top-right-radius: 18px;
+  background: #ffffff9c;
+  color: black;
+  margin: 18px;
+  margin-top: 32px;
 }
 input.total::placeholder {
-  color: white;
+  color: black;
 }
 .zero,
 .dot {
@@ -93,7 +128,7 @@ input.total::placeholder {
 .s4 {
   width: 400px;
   height: 100px;
-  transform: rotateX(90deg) translateZ(50px) rotate(180deg) translateY(48px);
+  transform: rotateX(90deg) translateZ(50px) rotate(180deg) translateY(50px);
 }
 /* left */
 .s5 {
@@ -107,9 +142,3 @@ input.total::placeholder {
   height: 100px;
   transform: rotateX(-90deg) translateZ(415px) rotate(180deg) translateY(-48px);
 }
-
-/* @keyframes rotate {
-  100% {
-    transform: rotateX(0deg) rotateY(360deg) rotateZ(360deg);
-  }
-} */
