--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,2 +1,32 @@
-.header {
+body {
+  /* background: #a1cbe7; */
+  /* background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%); */
+  background-image: linear-gradient(
+    111.4deg,
+    rgba(7, 7, 9, 1) 6.5%,
+    rgba(27, 24, 113, 1) 93.2%
+  );
+  display: flex;
+  gap: 140px;
+  justify-content: center;
+  cursor: auto;
+}
+
+.return-image {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.return-image img {
+  width: 40px;
+  height: 40px;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(2deg)
+    brightness(105%) contrast(101%);
+}
+
+.return-image p {
+  color: white;
 }
