--- a/public/css/shape.css
+++ b/public/css/shape.css
@@ -1,6 +1,3 @@
-body {
-  background: #342f30;
-}
 input {
   box-sizing: border-box;
   border-radius: 1em;
@@ -34,6 +31,8 @@ input::after {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 40px;
   height: 100%;
 }
 .calculator-form {
@@ -44,7 +43,6 @@ input::after {
   position: relative;
   transform-style: preserve-3d;
   animation: rotate 6s linear infinite;
-  /* transform: rotateX(8deg) rotateY(8deg) rotateZ(360deg); */
 }
 
 .calculator-form > div {
@@ -56,6 +54,8 @@ input::after {
     rgba(0, 0, 0, 1) 9.2%,
     rgba(127, 16, 16, 1) 103.9%
   );
+  /* background-color: #0093e9; */
+  /* background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%); */
   border: 0.1px solid #ffffff42;
 }
 .calculator-form form {
@@ -141,4 +141,12 @@ input.total::placeholder {
   width: 400px;
   height: 100px;
   transform: rotateX(-90deg) translateZ(415px) rotate(180deg) translateY(-48px);
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
