--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,6 +12,12 @@ body {
   cursor: auto;
 }
 
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .return-image {
   display: flex;
   gap: 5px;
