--- a/public/css/shape.css
+++ b/public/css/shape.css
@@ -1,6 +1,13 @@
 input {
+  border: none;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  cursor: default;
+  font-size: 18px;
+  text-align: center;
+  background: #ffffff9c;
   box-sizing: border-box;
-  border-radius: 1em;
+  border-radius: 0.5em;
 }
 input::before {
   width: 0.15em;
@@ -25,6 +32,25 @@ input::after {
   box-shadow: inset 0 0 0 0.2em #ff6347, inset 0 0 1em 0.3em #ff6347,
     inset 1em 1em 0.4em rgba(0, 0, 0, 0.6), 0 0 0 0.2em #ff6347,
     0 0 1em 0.3em #ff6347, 1em 1em 0.4em rgba(0, 0, 0, 0.6);
+}
+
+input.total {
+  width: 348px;
+  height: 100px;
+  border: 1px solid black;
+  border-bottom: 0;
+  height: 60px;
+  text-align: end;
+  padding-right: 40px;
+  border-top-left-radius: 18px;
+  border-top-right-radius: 18px;
+  background: #ffffff9c;
+  color: black;
+  margin: 18px;
+  margin-top: 32px;
+}
+input.total::placeholder {
+  color: black;
 }
 
 .shape {
@@ -80,33 +106,7 @@ button {
 .equal {
   border-bottom: 1px solid black;
 }
-input {
-  border: none;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
-  cursor: default;
-  font-size: 18px;
-  text-align: center;
-  background: #ffffff9c;
-}
-input.total {
-  width: 348px;
-  height: 100px;
-  border: 1px solid black;
-  border-bottom: 0;
-  height: 60px;
-  text-align: end;
-  padding-right: 40px;
-  border-top-left-radius: 18px;
-  border-top-right-radius: 18px;
-  background: #ffffff9c;
-  color: black;
-  margin: 18px;
-  margin-top: 32px;
-}
-input.total::placeholder {
-  color: black;
-}
+
 .zero,
 .dot {
   border-bottom: 1px solid black;
@@ -149,4 +149,58 @@ a {
   position: absolute;
   bottom: 10px;
   right: 10px;
+}
+#gx {
+  background-size: contain;
+  padding: 10% 0;
+  text-align: center;
+  height: auto;
+}
+
+.calculator-form > div {
+  animation: tronFilter 12s infinite;
+  fill: #000000;
+  stroke: #666;
+  stroke-width: 5;
+  stroke-linecap: round;
+  stroke-linejoin: bevel;
+}
+
+@keyframes tronFilter {
+  0% {
+    -webkit-filter: drop-shadow(-0.75px 0px 6px #31eefd);
+    filter: drop-shadow(-0.75px 0px 6px #31eefd);
+    stroke: #31eefd;
+  }
+  22% {
+    -webkit-filter: drop-shadow(-0.75px 0px 6px #1d85bb);
+    filter: drop-shadow(-0.75px 0px 6px #1d85bb);
+    stroke: #1d85bb;
+  } /* end blue */
+
+  42% {
+    -webkit-filter: drop-shadow(-0.75px 0px 6px #884173);
+    filter: drop-shadow(-0.75px 0px 6px #884173);
+    stroke: #884173;
+  }
+  62% {
+    -webkit-filter: drop-shadow(-0.75px 0px 6px #ff0071);
+    filter: drop-shadow(-0.75px 0px 6px #ff0071);
+    stroke: #ff0071;
+  } /* end magenta */
+  82% {
+    -webkit-filter: drop-shadow(-0.75px 0px 6px #009997);
+    filter: drop-shadow(-0.75px 0px 6px #009997);
+    stroke: #009997;
+  }
+  92% {
+    -webkit-filter: drop-shadow(-0.75px 0px 6px #92ffd7);
+    filter: drop-shadow(-0.75px 0px 6px #92ffd7);
+    stroke: #92ffd7;
+  } /* end green */
+  100% {
+    -webkit-filter: drop-shadow(-0.75px 0px 6px #31eefd);
+    filter: drop-shadow(-0.75px 0px 6px #31eefd);
+    stroke: #31eefd;
+  }
 }
