--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,15 +1,18 @@
 body {
-  /* background: #a1cbe7; */
-  /* background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%); */
   background-image: linear-gradient(
     111.4deg,
     rgba(7, 7, 9, 1) 6.5%,
     rgba(27, 24, 113, 1) 93.2%
   );
+}
+
+.content {
   display: flex;
-  gap: 140px;
   justify-content: center;
+  align-items: center;
   cursor: auto;
+  height: 100%;
+  margin-right: 300px;
 }
 
 #particles-js {
