--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,11 @@
 body {
-  background-image: linear-gradient(
+  background-color: black;
+  /* background-image: linear-gradient(
     111.4deg,
     rgba(7, 7, 9, 1) 6.5%,
     rgba(27, 24, 113, 1) 93.2%
-  );
+  ); */
+  margin: 0;
 }
 
 .content {
@@ -12,7 +14,7 @@ body {
   align-items: center;
   cursor: auto;
   height: 100%;
-  margin-right: 300px;
+  margin-left: 300px;
 }
 
 #particles-js {
@@ -38,4 +40,8 @@ body {
 
 .return-image p {
   color: white;
+}
+
+.hidden {
+  display: none !important;
 }
