--- a/public/css/levels.css
+++ b/public/css/levels.css
@@ -1,22 +1,38 @@
 .level-selector {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding: 60px;
   background: #ffffff4a;
   gap: 30px;
   position: absolute;
-  right: 0;
-  /* bottom: 0;
-  transform: translate(0, -50%); */
+  left: 0;
   height: 100%;
-  width: 200px;
+  width: 290px;
 }
+
 .level-selector p {
+  font-size: 1rem;
+  color: black;
+  font-family: monospace;
+  text-align: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.level-selector p.title {
   font-size: 2rem;
   color: white;
   font-family: fantasy;
+}
+
+.level-questions {
+  margin-top: 10px;
+  display: inline-block;
+  color: black;
 }
 
 .button-3d {
